# cuaderno-seguimiento

./: .gitignore  ARQUITECTURA.md  CHANGELOG.md  CLAUDE.md  INSTRUCCIONES.md  README.md  SEGURIDAD.md  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: deploy-pages.yml
android/: .gitignore
android/app/: build.gradle
scripts/: generate-latest-json.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
web/: funciones.html  index.html  robots.txt  sitemap.xml  terminos.html
web/app/: index.html  manifest.webmanifest  portal.html  styles.css  sw.js
web/app/js/: auth.js  config.js  events.js  help-tutoriales.js  helpers.js  portal.js  sync.js  tour.js  views-admin.js  views-agenda.js  views-alumnos.js  views-core.js  views-cuenta.js  views-ficha.js  views-materias.js  views-stats.js  views-tablero.js  views.js
