[package]
name = "cuaderno-seguimiento"
version = "1.2.0"
description = "Cuaderno de seguimiento — seguimiento de estudiantes de clases particulares de matemática"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"

[[bin]]
name = "cuaderno-seguimiento"
path = "src/main.rs"
